src/content/docs/ko/sdk/unity/v5/features/ad-revenue.mdx
---
title: "광고 매출 정보 기록"
description: "Adjust SDK를 사용하여 지원되는 네트워크 파트너의 광고 매출 정보를 기록합니다."
slug: "en/sdk/unity/features/ad-revenue"
versions: 
    - 
        label: "v5"
        value: "v5"
        default: true
    - 
        label: "v4"
        value: "v4"
redirects: 
    v4: "/ko/sdk/unity/v4/features/ad-revenue"
---
Adjust SDK를 사용하여 [지원되는 네트워크 파트너](https://help.adjust.com/en/article/ad-revenue)의 광고 매출을 기록할 수 있습니다.
<callout type="important"> 

광고 매출을 측정하려면 Adjust 대시보드에서 몇 가지 추가 설정 단계를 거쳐야 합니다. 자세한 정보는 담당 테크니컬 어카운트 매니저나 [support@adjust.com](mailto:support@adjust.com)으로 연락주시기 바랍니다.
</Callout> 

AdjustAdRevenue 객체 인스턴스화 \{\#instantiate\-an\-adjustadrevenue\-object\}
-----------------------------------------------------------------------------

<codeblock title="메서드 서명"> 

```cs
public AdjustAdRevenue(string source)
```

</CodeBlock> 

Adjust SDK를 사용하여 광고 매출 정보를 전송하려면 `AdjustAdRevenue` 객체를 인스턴스화해야 합니다. 이 객체에는 광고 매출이 앱에 기록될 때 Adjust로 전송되는 변수가 포함됩니다.

광고 매출 객체를 인스턴스화하려면 새로운 `AdjustAdRevenue` 인스턴스를 생성하고 다음 파라미터를 전달합니다.

* `source` \(`string`\): 광고 매출 소스. 아래 표에서 이용 가능한 소스 참조

|    인수 \(Arguments\)     |     광고 매출 소스      |
|---------------------------|-------------------|
| `"applovin_max_sdk"`      | AppLovin MAX      |
| `"admob_sdk"`             | Admob             |
| `"ironsource_sdk"`        | ironSource        |
| `"admost_sdk"`            | Admost            |
| `"unity_sdk"`             | Unity             |
| `"helium_chartboost_sdk"` | Helium Chartboost |
| `"adx_sdk"`               | Ad\(X\)         |
| `"publisher_sdk"`         | 일반적인 소스           |
| `"tradplus_sdk"`          | TradPlus          |
| `"topon_sdk"`             | TopOn             |

```cs
AdjustAdRevenue adjustAdRevenue = new AdjustAdRevenue("applovin_max_sdk");
Adjust.TrackAdRevenue(adjustAdRevenue);
```

광고 매출 전송 \{\#send\-ad\-revenue\}
-------------------------------------

<codeblock title="메서드 서명"> 

```cs
public static void TrackAdRevenue(AdjustAdRevenue adRevenue);
```

</CodeBlock> 

Adjust로 광고 매출을 전송하려면 광고 매출 인스턴스를 인수로 사용하여 `Adjust.TrackAdRevenue` 메서드를 호출합니다.

```cs
AdjustAdRevenue adjustAdRevenue = new AdjustAdRevenue("applovin_max_sdk");
//...
Adjust.TrackAdRevenue(adjustAdRevenue);
```

광고 매출 금액 기록 \{\#record\-ad\-revenue\-amount\}
---------------------------------------------------

<codeblock title="메서드 서명"> 

```cs
public void SetRevenue(double revenue, string currency);
```

</CodeBlock> 

광고 매출 금액을 전송하려면 `AdjustAdRevenue` 인스턴스에서 `SetRevenue` 메서드를 호출하고 다음 인수를 전달합니다.

* `revenue` \(`double`\): 매출 금액
* `currency` \(`string`\): 리포팅에 사용하는 통화의 3글자 [ISO 4217 코드](https://www.iban.com/currency-codes)

<callout type="seealso"> 

자세한 정보는 Adjust의 [여러 통화로 구매 기록 가이드](https://help.adjust.com/en/article/currency-conversion)를 참조하시기 바랍니다.
</Callout> 

```cs
AdjustAdRevenue adjustAdRevenue = new AdjustAdRevenue("applovin_max_sdk");
//...
adjustAdRevenue.SetRevenue(1.00, "EUR");
//...
Adjust.TrackAdRevenue(adjustAdRevenue);
```

광고 캠페인 세부 사항 기록 \{\#record\-ad\-campaign\-details\}
---------------------------------------------------------

`AdjustAdRevenue` 클래스에 광고 캠페인 리포트에 사용할 수 있는 속성이 포함됩니다.

### 광고 노출 \{\#ad\-impressions\}

<codeblock title="속성 선언"> 

```cs
public int? AdImpressionsCount { get; set; }
```

</CodeBlock> 

기록된 광고 노출 수를 전송하려면 `AdjustAdRevenue` 인스턴스의 `AdImpressionsCount` 속성을 광고 노출 수로 설정합니다.

```cs
AdjustAdRevenue adjustAdRevenue = new AdjustAdRevenue("applovin_max_sdk");
//...
adjustAdRevenue.AdImpressionsCount = 10;
//...
Adjust.TrackAdRevenue(adjustAdRevenue);
```

### 광고 매출 네트워크 \{\#ad\-revenue\-network\}

<codeblock title="속성 선언"> 

```cs
public string AdRevenueNetwork { get; set; }
```

</CodeBlock> 

광고 매출과 관련된 네트워크를 기록하려면 `AdjustAdRevenue` 인스턴스의 `AdRevenueNetwork` 속성에 네트워크 이름을 할당합니다.

```cs
AdjustAdRevenue adjustAdRevenue = new AdjustAdRevenue("applovin_max_sdk");
//...
adjustAdRevenue.AdRevenueNetwork = "network1";
//...
Adjust.TrackAdRevenue(adjustAdRevenue);
```

### 광고 매출 단위 \{\#ad\-revenue\-unit\}

<codeblock title="속성 선언"> 

```cs
public string AdRevenueUnit { get; set; }
```

</CodeBlock> 

광고 매출 게재 단위를 전송하려면 광고 매출 인스턴스의 `AdjustAdRevenue` 속성에 `AdRevenueUnit` 값으로 단위를 할당합니다.

```cs
AdjustAdRevenue adjustAdRevenue = new AdjustAdRevenue("source");
//...
adjustAdRevenue.AdRevenueUnit = "unit1";
//...
Adjust.TrackAdRevenue(adjustAdRevenue);
```

### 광고 매출 게재 위치 \{\#ad\-revenue\-placement\}

<codeblock title="속성 선언"> 

```cs
public string AdRevenuePlacement { get; set; }
```

</CodeBlock> 

광고 매출 게재 위치를 전송하려면 `AdjustAdRevenue` 인스턴스의 `AdRevenuePlacement` 속성에 광고 게재 위치를 할당합니다. 

```cs
AdjustAdRevenue adjustAdRevenue = new AdjustAdRevenue("source");
//...
adjustAdRevenue.AdRevenuePlacement = "banner";
//...
Adjust.TrackAdRevenue(adjustAdRevenue);
```

콜백 파라미터 추가 \{\#add\-callback\-parameters\}
-----------------------------------------------

```cs
public void AddCallbackParameter(string key, string value);
```

Adjust 대시보드에 [콜백 URL](https://help.adjust.com/en/article/recommended-placeholders-callbacks)을 등록하면 SDK가 이벤트를 기록할 때 ADK가 GET 요청을 콜백 URL로 보냅니다.

콜백 파라미터를 서버에 구성할 수 있습니다. 이벤트에 대한 파라미터 구성이 완료되면 SDK는 이를 [콜백 URL](https://help.adjust.com/en/article/raw-data-exports)에 추가합니다. 해당 정보를 사용하여, BI 시스템을 통해 사용자 인앱 행동을 분석할 수 있습니다.

`string` 키\-값 인수와 함께 `AddCallbackParameter` 메서드를 호출하여 이벤트에 콜백 파라미터를 추가합니다. 이 메서드를 여러 번 호출함으로써 여러 파라미터를 추가할 수 있습니다.

Adjust SDK는 이벤트를 측정하고 콜백 파라미터가 추가된 URL로 요청을 전송합니다. 예를 들어 URL `https://www.mydomain.com/callback`을 등록한 경우 콜백은 다음과 같습니다.
<codeblock highlight="key=value, foo=bar"> 

```http
https://www.mydomain.com/callback?key=value&foo=bar
```

</CodeBlock> <callout type="note"> 

Adjust는 사용자의 커스텀 콜백 파라미터를 보관하지 않습니다. 커스텀 파라미터는 콜백 URL에만 추가됩니다.
</Callout> 

CSV 업로드를 사용하는 경우, 반드시 CSV 정의에 파라미터를 추가하시기 바랍니다.

Adjust는 SDK에서 URL로 정보를 전송하는 데 사용할 수 있는 다양한 플레이스홀더를 지원합니다. 예를 들어, iOS의 경우 `{idfa}` 플레이스홀더, Android의 경우 `{gps_adid}` 플레이스홀더입니다. `{publisher_parameter}` 플레이스홀더는 단일 문자열의 모든 콜백 파라미터를 나타냅니다.
<callout type="seealso"> 

Adjust [콜백 가이드](https://help.adjust.com/en/article/callbacks)에서 사용 가능한 값의 전체 목록을 비롯하여 URL 콜백을 사용하는 방법을 자세히 알아보실 수 있습니다.
</Callout> 

```cs
AdjustAdRevenue adjustAdRevenue = new AdjustAdRevenue("source");
//...
adjustAdRevenue.AddCallbackParameter("key", "value");
//...
Adjust.TrackAdRevenue(adjustAdRevenue);
```

파트너 파라미터 추가 \{\#add\-partner\-parameters\}
-----------------------------------------------

```cs
public void AddPartnerParameter(string key, string value);
```

[파트너 파라미터](https://help.adjust.com/en/article/data-sharing-ad-network#map-parameters)를 추가하여 네트워크 파트너에게 추가 정보를 전송할 수 있습니다.

Adjust는 설정한 [외부 파트너](https://help.adjust.com/en/article/integrated-partners)에게 파트너 파라미터를 전송합니다. 이러한 정보는 보다 세분화된 분석과 리타겟팅에 유용할 것입니다. 파트너에 대해 파라미터를 설정하고 활성화하면 Adjust 서버는 해당 파라미터를 포워드 합니다.

`string` 키\-값 인수와 함께 `AddPartnerParameter` 메서드를 호출하여 이벤트에 파트너 파라미터를 추가합니다. 이 메서드를 여러 번 호출함으로써 여러 파라미터를 추가할 수 있습니다.

```cs
AdjustAdRevenue adjustAdRevenue = new AdjustAdRevenue("source");
//...
adjustAdRevenue.AddPartnerParameter("key", "value");
//...
Adjust.TrackAdRevenue(adjustAdRevenue);
```

예 \{\#example\}
------------------

이 예시는 다음 속성을 사용하여 광고 매출 객체를 설정하고 기록하는 방법을 보여줍니다.

* 매출 소스: AppLovin MAX 
* 매출액: 1유로\(Euro\)
* 광고 노출: 10
* 광고 매출 네트워크: *`"network1"`* 
* 광고 매출 단위: *`"unit1"`* 
* 광고 매출 게재 위치: *`"banner"`* 
* 콜백 파라미터: `"key1" = "value1"`
* 파트너 파라미터: `"key2" = "value2"`

```cs
AdjustAdRevenue adjustAdRevenue = new AdjustAdRevenue("applovin_max_sdk");
adjustAdRevenue.SetRevenue(1.00, "EUR");
adjustAdRevenue.AdImpressionsCount = 10;
adjustAdRevenue.AdRevenueNetwork = "network1";
adjustAdRevenue.AdRevenueUnit = "unit1";
adjustAdRevenue.AdRevenuePlacement = "banner";
adjustAdRevenue.AddCallbackParameter("key1", "value1");
adjustAdRevenue.AddPartnerParameter("key2", "value2");
Adjust.TrackAdRevenue(adjustAdRevenue);
```

